<resources>
    <string name="app_name">RadarAnimation</string>
    <string name="label_bt_open_radar_view_activity">Abrir RadarViewActivity</string>
    <string name="label_bt_open_path_animation_activity">Abrir PathAnimationActivity</string>
    <string name="label_bt_open_basic_shapes_activity">Abrir BasicShapesActivity</string>
    <string name="text_bt_drawing_rect">Retângulo</string>
    <string name="text_bt_drawing_circle">Circulo</string>
    <string name="text_bt_drawing_paths">Path</string>
    <string name="text_bt_drawing_square">Quadrado</string>
    <string name="text_bt_drawing_triangle">Triângulo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_bt_open_main_compose_activity">Abrir Main Activity Modulo Estudos Compose</string>
    <string name="label_bt_open_first_tutorial_compose">Abrir Activity do Primeiro Tutorial de Compose</string>
    <string name="label_bt_open_drawing_centered_text_activity">Abrir Activity com DrawTextView</string>
    <string name="title_activity_from_room_to_sql_delight">FromRoomToSqlDelightActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="action_settings">Settings</string>
    <string name="hint_word">Word…</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="add_word">Add word</string>
    <string name="label_bt_open_first_tutorial_room_with_view_model_and_livedata">
        Abrir Activity Codebabs Room With ViewModel e LiveData
    </string>
    <string name="label_bt_open_first_tutorial_room_with_view_model_and_flow">
        Abrir Activity Codebabs Room With ViewModel e Flow
    </string>
    <string name="title_activity_open_feature">OpenFeatureActivity</string>
    <string name="label_bt_open_tutorial_view_model_test_codelabs">Abrir Test View Model - Game Word Scramble</string>
    <string name="title_activity_scramble_game">ScrambleGameActivity</string>
    <string name="label_start_game_scramble_word_activity">Start Word Scramble</string>
    <string name="title_activity_unit_test_coroutines">UnitTestCoroutinesActivity</string>
    <string name="label_bt_open_tutorial_coroutine_dispatcher">
        Abrir Activity Test Coroutine Dispatcher
    </string>
    <string name="label_bt_open_tutorial_accessibility_service">
        Abrir Activity Tutorial AccessibilityService
    </string>
    <string name="app_name_game">Unscramble</string>
    <!-- Inicio strings projeto wordscramble-->
    <string name="instructions">Unscramble the word using all the letters.</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="score">Score: %d</string>
    <string name="word_count">%d/10</string>

    <string name="enter_your_word">Enter your word</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_scored">"You scored: %d"</string>
    <string name="exit">Exit</string>
    <string name="play_again">Play Again</string>
    <string name="wrong_guess">Wrong Guess!</string>
    <string name="title_activity_testing_in_jetpack_compose">TestingInJetpackComposeActivity</string>
    <string name="title_activity_write_automated_test">WriteAutomatedTestActivity</string>
    <string-array name="hints_word">
        <item>Word</item>
        <item>Anything</item>
    </string-array>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="label_bt_open_tutorial_run_adb_commands">Abrir Activity Executar Commands ADB</string>
    <string name="label_bt_open_quick_guide_create_vertical_scrolling_list">Compose, Create a vertical Scrolling List</string>
    <string name="label_bt_open_all_quick_guides">Todos os Quick Guides</string>
    <string name="label_bt_open_all_features_jetpack_compose">Todos os estudos sobre Jetpack Compose</string>
    <!-- fim strings projeto wordscramble-->


</resources>