<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.br.experience.MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Button
                android:id="@+id/bt_open_basic_shapes_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_bt_open_basic_shapes_activity"
                />

            <Button
                android:id="@+id/bt_open_path_animation_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_bt_open_path_animation_activity"
                />

            <Button
                android:id="@+id/bt_open_radar_view_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_bt_open_radar_view_activity"
                />

            <Button
                android:id="@+id/bt_open_main_compose_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_bt_open_main_compose_activity"
                />

            <Button
                android:id="@+id/bt_open_drawing_centered_text_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_bt_open_drawing_centered_text_activity"
                />

            <Button
                android:id="@+id/bt_open_first_tutorial_compose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_bt_open_first_tutorial_compose"
                />


            <Button
                android:id="@+id/bt_open_tutorial_room_with_view_model_and_livedata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_bt_open_first_tutorial_room_with_view_model_and_livedata"
                />


            <Button
                android:id="@+id/bt_open_tutorial_room_with_view_model_and_flow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_bt_open_first_tutorial_room_with_view_model_and_flow"
                />

            <Button
                android:id="@+id/bt_open_tutorial_view_model_and_livedata_test_codelabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_bt_open_tutorial_view_model_test_codelabs"
                />

            <Button
                android:id="@+id/bt_open_tutorial_coroutine_dispatcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_bt_open_tutorial_coroutine_dispatcher"
                />


            <Button
                android:id="@+id/bt_open_tutorial_accessibility_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_bt_open_tutorial_accessibility_service"
                />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>