<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.br.experience.features.book.android2dgraphics.chp3.DrawingPrimitivesActivity">

    <com.br.experience.features.drawingbasicshapes.views.CanvasView
        android:id="@+id/canvas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/wrapper_buttons"
        />

    <ScrollView
        android:id="@+id/wrapper_buttons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/canvas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt_drawing_rect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_bt_drawing_rect"
                />

            <Button
                android:id="@+id/bt_drawing_circle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_bt_drawing_circle"
                />

            <Button
                android:id="@+id/bt_drawing_paths"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_bt_drawing_paths"
                />

            <Button
                android:id="@+id/bt_drawing_square"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_bt_drawing_square"
                />

            <Button
                android:id="@+id/bt_drawing_triangle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_bt_drawing_triangle"
                />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>